feat: Reworking NanoBlog
- Templates are now defined in main configuration  rather then different
  structure files
- Posts may have a template, "{NAME}" can be used for id tags
- Data / export directories can now be configured and empty presets
  were removed
- Updated README and Swagger documentation
- Update version to 0.2.0
