# NanoBlog/Controllers/ExportController.cs
@@ -1,26 +1,13 @@
 namespace NanoBlog.Controllers;
 
 [ApiController]
-public class ExportController(
-    IExportationService exportationService,
-    IBlogGenerator blogGenerator,
-    ILogger<ExportController> logger
-) : ControllerBase
+public class ExportController(IExportService exportService) : ControllerBase
 {
     [HttpPost("export")]
-    public async Task<IActionResult> Export(CancellationToken cancellationToken)
+    public async Task<IActionResult> ExportAsync(CancellationToken cancellationToken)
     {
-        await exportationService.ExportAsync(cancellationToken);
+        await exportService.ExportAsync(cancellationToken);
 
-        logger.LogInformation("Exported successfully");
         return NoContent();
-    }
-
-    [HttpGet("preview")]
-    public async Task<IActionResult> GetPreview(CancellationToken cancellationToken)
-    {
-        var preview = await blogGenerator.GeneratePreviewAsync(cancellationToken);
-
-        return Content(preview, "text/html");
     }
 }
