# NanoBlog/Services/MimeTypes/MimeTypeProvider.cs
@@ -5,9 +5,9 @@ public class MimeTypeProvider : IMimeTypeProvider
     private readonly IReadOnlyList<(byte[] Sequence, MimeType MimeType, string Extension)> _magicByteMapping =
         new List<(byte[], MimeType, string)>
         {
-            (new byte[] { 0xFF, 0xD8, 0xFF }, MimeType.Jpeg, "jpeg"),
-            (new byte[] { 0xFF, 0xD8, 0xFF }, MimeType.Jpeg, "jpg"),
-            (new byte[] { 0x89, 0x50, 0x4E, 0x47, 0x0D, 0x0A, 0x1A, 0x0A }, MimeType.Png, "png"),
+            ([0xFF, 0xD8, 0xFF], MimeType.Jpeg, "jpeg"),
+            ([0xFF, 0xD8, 0xFF], MimeType.Jpeg, "jpg"),
+            ([0x89, 0x50, 0x4E, 0x47, 0x0D, 0x0A, 0x1A, 0x0A], MimeType.Png, "png"),
             ("GIF87a"u8.ToArray(), MimeType.Gif, "gif"),
             ("GIF89a"u8.ToArray(), MimeType.Gif, "gif"),
             ("<?xml"u8.ToArray(), MimeType.Svg, "svg"),
@@ -16,8 +16,7 @@ public class MimeTypeProvider : IMimeTypeProvider
     public async Task<MimeType?> ProvideMimeTypeAsync(
         IFormFile formFile,
         Stream content,
-        CancellationToken cancellationToken
-    )
+        CancellationToken cancellationToken)
     {
         var detectedMimeType = await ProvideMimeTypeAsync(formFile.FileName, content, cancellationToken);
         if (formFile.ContentType is not { Length: > 0 } fileMimeType)
@@ -33,8 +32,7 @@ public class MimeTypeProvider : IMimeTypeProvider
     public async Task<MimeType?> ProvideMimeTypeAsync(
         string fileName,
         Stream content,
-        CancellationToken cancellationToken
-    )
+        CancellationToken cancellationToken)
     {
         var mimeTypesByFileExtension = DetermineMimeType(fileName);
         var mimeTypesByContent = await DetermineMimeTypesAsync(content, cancellationToken);
@@ -47,7 +45,7 @@ public class MimeTypeProvider : IMimeTypeProvider
         return null;
     }
 
-    private IEnumerable<MimeType> DetermineMimeType(string fileName)
+    private List<MimeType> DetermineMimeType(string fileName)
     {
         var fileExtension = fileName.Split('.').Last();
 
@@ -60,8 +58,7 @@ public class MimeTypeProvider : IMimeTypeProvider
 
     private async Task<IReadOnlyList<MimeType>> DetermineMimeTypesAsync(
         Stream fileStream,
-        CancellationToken cancellationToken
-    )
+        CancellationToken cancellationToken)
     {
         var bufferSize = _magicByteMapping.Max(m => m.Sequence.Length);
         var buffer = new byte[bufferSize];
