# openapi.yaml
@@ -2,12 +2,13 @@ openapi: 3.1.0
 info:
   title: its-laika/NanoBlog
   description: |-
-    A simplistic blogging system
-    NanoBlog is a blogging system on file basis, therefore it doesn't use a database, scripting or cookies.
+    _a simplistic blogging system_
+
+    NanoBlog is a blogging system on file basis, therefore it doesn't use a database or cookies.
   license:
     name: MIT
     url: https://github.com/its-laika/NanoBlog/blob/main/LICENSE
-  version: 0.0.14
+  version: 0.2.0
 externalDocs:
   description: Github repository
   url: https://github.com/its-laika/NanoBlog
@@ -18,8 +19,6 @@ tags:
     description: Control files that can be included into the blog
   - name: posts
     description: Control the posts of the blog
-  - name: structure
-    description: Control basic blog structure
   - name: export
     description: Control exporting stashed changes
 components:
@@ -42,7 +41,8 @@ components:
           schema:
             $ref: "#/components/schemas/Error"
     MimeTypeError:
-      description: MIME type error (e.g. MIME type is not identifiable or MIME types differ when trying to update existing asset)
+      description: |-
+        MIME type error (e.g. MIME type is not identifiable or MIME types differ when trying to update existing asset)
       content:
         application/problem+json:
           schema:
@@ -220,44 +220,6 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
-  /posts/template:
-    get:
-      tags:
-        - posts
-      summary: Returns a template for new posts
-      description: Returns content of post-template.txt which can be used as a template for new post in case all posts have the same structure.
-      responses:
-        "200":
-          description: Post template
-          content:
-            text/html:
-              schema:
-                type: string
-                examples:
-                  - "<h1>title</h1>this is my template"
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        "404":
-          $ref: "#/components/responses/NotFound"
-    put:
-      tags:
-        - posts
-      summary: Updates template for new posts
-      description: Updates content of post-template.txt which can be used by calling /posts/template
-      requestBody:
-        description: New post template content
-        content:
-          text/html:
-            schema:
-              type: string
-        required: true
-      responses:
-        "201":
-          description: Successful operation
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        "404":
-          $ref: "#/components/responses/NotFound"
   /posts/excerpts:
     get:
       parameters:
@@ -377,69 +339,6 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
-  /structure:
-    get:
-      tags:
-        - structure
-      summary: Gets list of structure files
-      description: Gets list of all stored structure file names
-      responses:
-        "200":
-          $ref: "#/components/responses/FileList"
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-  /structure/{fileName}:
-    get:
-      parameters:
-        - name: fileName
-          in: path
-          description: Structure file name
-          required: true
-          schema:
-            type: string
-      tags:
-        - structure
-      summary: Returns structure file content
-      description: Returns structure file content by file name
-      responses:
-        "200":
-          description: Stored structure file content
-          content:
-            text/html:
-              schema:
-                type: string
-                examples:
-                  - "<h1>title</h1>this is my content"
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        "404":
-          $ref: "#/components/responses/NotFound"
-    put:
-      parameters:
-        - name: fileName
-          in: path
-          description: Structure file name
-          required: true
-          schema:
-            type: string
-      tags:
-        - structure
-      summary: Updates a structure file
-      description: Updates an existing structure file by new content
-      requestBody:
-        description: New structure file content
-        content:
-          text/html:
-            schema:
-              type: string
-        required: true
-      responses:
-        "201":
-          description: Successful operation
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        "404":
-          $ref: "#/components/responses/NotFound"
   /export:
     post:
       tags:
@@ -449,22 +348,5 @@ paths:
       responses:
         "201":
           description: Successful operation
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-  /preview:
-    get:
-      tags:
-        - export
-      summary: Shows preview of stashed changes
-      description: Shows preview of stashed changes
-      responses:
-        "200":
-          description: Compiled HTML file
-          content:
-            text/html:
-              schema:
-                type: string
-                examples:
-                  - "<h1>title</h1>this is my content"
         "401":
           $ref: "#/components/responses/Unauthorized"
